@@ -270,6 +270,10 @@
 							<td><input type="checkbox" id="coinplay"><label for="coinplay">Coinplay.io</label></td>
 							<td><input type="checkbox" id="funstock"><label for="funstock">FunStock Digital</label></td>
 						</tr>
+						<tr>
+							<td><input type="checkbox" id="wingamestore"><label for="wingamestore">WinGameStore</label></td>
+							<td><input type="checkbox" id="gamebillet"><label for="gamebillet">GameBillet</label></td>
+						</tr>
 					</table>
 					<li class="header" id="store_regionalprice_header">Regional Price Comparison</li>
 					<li id="regional_price_li">
