@@ -1,5 +1,6 @@
 v8.0
 -----
++ Added lowest price and price history information for WinGameStore and GameBillet
 + Added a menu option for logged in users to send their Steam collection info to IsThereAnyDeal.com
 : Fixed a bug that caused tags not to display correctly on wishlist pages
 : Fixed bugs relating to changes Valve made in the badge page layout
